--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,12 +5,15 @@ jobs:
   check-code-coverage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: codecov/codecov-action@v3
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
       with:
-        directory: ./coverage/reports/
-        files: ./coverage1.xml,./coverage2.xml,!./cache
-        flags: unittests # optional
-        name: codecov-diogenes # optional
-        fail_ci_if_error: true # optional (default = false)
-        verbose: true # optional (default = false)
+        java-version: 17
+    - name: Install dependencies
+      run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    - name: Run tests and collect coverage
+      run: mvn -B test
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
