--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Install dependencies
       run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     - name: Run tests and collect coverage
-      run: mvn -B test
+      run: mvn -B test jacoco:report
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
