[QUALITY] Add slf4j logger. Change pipeline to only be executed in main

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,9 @@
 name: diogenes-actions
 run-name: Actions for the diogenes project
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
   check-code-coverage:
     runs-on: ubuntu-latest
