[FEATURE] #11 Create keycloak realm and spring security to allow authentication

--- a/.exmple.env
+++ b/.exmple.env
@@ -1,2 +1,8 @@
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
+
+KEYCLOAK_ADMIN_USER=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
+KEYCLOAK_DATABASE_USERNAME=postgres
+KEYCLOAK_DATABASE_PASSWORD=postgres
