--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,3 @@
-spring.datasource.jdbc-url=jdbc:h2:mem:testdb
-spring.flyway.clean-disabled=false
+# This is needed because spring does not seem to be able to just take the profile from the annotation
+# when the test is calling directly the main spring boot application
+spring.profiles.active=test
