--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,14 @@ services:
 
   diogenes:
     container_name: diogenes
-    image: nck974/diogenes:0.0.3-SNAPSHOT
+    image: nck974/diogenes:0.0.6-SNAPSHOT
     depends_on:
       - diogenes_db
     environment:
       - SPRING_DATASOURCE_JDBC-URL=jdbc:postgresql://diogenes_db:5432/diogenes_db
       - SPRING_DATASOURCE_USERNAME=${DATABASE_USER}
       - SPRING_DATASOURCE_PASSWORD=${DATABASE_PASSWORD}
-      - SPRING_APPLICATION_JSON={"keycloak.server":"http://keycloak:8081"}
+      - SPRING_APPLICATION_JSON={"keycloak.server":"http://keycloak:8081/keycloak"}
     ports:
       - 8080:8080
 
@@ -38,15 +38,14 @@ services:
       - KC_DB_URL=jdbc:postgresql://keycloak_db/keycloak_db
       - KC_DB_USERNAME=${KEYCLOAK_DATABASE_USERNAME}
       - KC_DB_PASSWORD=${KEYCLOAK_DATABASE_PASSWORD}
-      - KC_HOSTNAME_URL=http://keycloak:8081
-      - KC_HTTP_PORT=8081
       - KC_HOSTNAME_STRICT=false
       - KC_HOSTNAME_STRICT_HTTPS=false
       - KC_HTTP_ENABLED=true
       - KC_LOG_LEVEL=info
+      - KC_PROXY=passthrough
     ports:
       - '8081:8081'
-    command: -v start --import-realm
+    command: -v start --import-realm --http-relative-path=/keycloak --http-port=8081
     volumes:
       - ./keycloak/imports:/opt/keycloak/data/import
 
@@ -62,6 +61,17 @@ services:
       - '5433:5432'
     volumes:
       - keycloak_db_volume:/var/lib/postgresql/data
+
+  nginx:
+    container_name: nginx
+    image: nginx:1.23.4
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    environment:
+      - NGINX_HOST=localhost
+      - NGINX_PORT=80
 
 volumes:
   db:
