--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,19 @@
 						</goals>
 					</execution>
 				</executions>
-
+			</plugin>
+			<!-- Get build info to show in swagger the correct version -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>build-info</id>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
