Allow cors requests for the angular server

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
-		<!-- Automatica refresh during development -->
+		<!-- Automatic refresh during development -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
