--- a/ng-diogenes/package.json
+++ b/ng-diogenes/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/color-picker": "^16.0.1",
     "@angular/animations": "^16.2.2",
     "@angular/cdk": "^16.2.1",
     "@angular/common": "^16.2.2",
