--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM eclipse-temurin:17-jdk-alpine
-COPY target/*.jar app.jar
+COPY diogenes/target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
