--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Change directory to spring project 'diogenes'
       run: cd diogenes
     - name: Install dependencies
-      run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+      run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -f diogenes/pom.xml
     - name: Run tests and collect coverage
-      run: mvn -B test jacoco:report
+      run: mvn -B test jacoco:report -f diogenes/pon.xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
