--- a/ng-diogenes/package.json
+++ b/ng-diogenes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-diogenes",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,32 +11,32 @@
   "private": true,
   "dependencies": {
     "@angular-material-components/color-picker": "^16.0.1",
-    "@angular/animations": "^16.2.2",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.2",
-    "@angular/compiler": "^16.2.2",
-    "@angular/core": "^16.2.2",
-    "@angular/forms": "^16.2.2",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.2.2",
+    "@angular/animations": "^16.2.4",
+    "@angular/cdk": "^16.2.3",
+    "@angular/common": "^16.2.4",
+    "@angular/compiler": "^16.2.4",
+    "@angular/core": "^16.2.4",
+    "@angular/forms": "^16.2.4",
+    "@angular/material": "^16.2.3",
+    "@angular/platform-browser": "^16.2.4",
+    "@angular/platform-browser-dynamic": "^16.2.4",
+    "@angular/router": "^16.2.4",
     "ngx-infinite-scroll": "^16.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.6",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.1.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular/cli": "^16.2.1",
+    "@angular/compiler-cli": "^16.2.4",
+    "@types/jasmine": "~4.3.5",
+    "jasmine-core": "~5.1.1",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.6"
   }
 }
