--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,24 @@ events {
 http {
     server {
         listen 80;
-        server_name diogenes;
+
+        http2 on;
+
+        server_name $hostname;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 default_server ssl;
+        listen [::]:443 ssl; # ipv6
+
+        http2 on;
+
+        server_name $hostname;
+
+        # Configure ssl
+        include /etc/nginx/conf.d/ssl.conf;
 
         # Hide server versions
         server_tokens off;
