--- a/docker/Dockerfile.nginx
+++ b/docker/Dockerfile.nginx
@@ -1,3 +1,3 @@
 FROM nginx:1.25.2
-RUN rm /etc/nginx/nginx.conf
-COPY nginx/nginx.conf /etc/nginx/.
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/ssl.conf /etc/nginx/conf.d/ssl.conf
