--- a/ng-diogenes/angular.json
+++ b/ng-diogenes/angular.json
@@ -26,7 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/logo/logo_transparent.png",
               "src/assets"
             ],
             "styles": [
