--- a/diogenes/pom.xml
+++ b/diogenes/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>dev.nichoko</groupId>
 	<artifactId>diogenes</artifactId>
-	<version>0.0.7-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>diogenes</name>
 	<description>Software to manage the personal inventary of items that you own.</description>
 
