--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   diogenes-ng:
     container_name: diogenes-ng
-    image: nck974/diogenes-ng:0.0.1-SNAPSHOT-2
+    image: nck974/diogenes-ng:0.0.1
     restart: unless-stopped
     depends_on:
       - diogenes
@@ -16,7 +16,7 @@ services:
 
   diogenes:
     container_name: diogenes
-    image: nck974/diogenes:0.0.8-SNAPSHOT-1
+    image: nck974/diogenes:0.0.1
     restart: unless-stopped
     depends_on:
       - diogenes-db
@@ -43,7 +43,7 @@ services:
 
   reverse-proxy:
     container_name: diogenes-reverse-proxy
-    image: nck974/diogenes-reverse-proxy:0.0.1-SNAPSHOT-2
+    image: nck974/diogenes-reverse-proxy:0.0.1
     restart: unless-stopped
     ports:
       - 443:443
