[TEST] Implement tests to verify image creation

--- a/diogenes/src/test/resources/application-test.yml
+++ b/diogenes/src/test/resources/application-test.yml
@@ -10,3 +10,7 @@ spring:
 
 security:
   disable-security: true
+
+# Configure the root folder to verify the uploads paths
+file:
+  upload-dir: uploads
