--- a/diogenes/src/main/resources/application.yml
+++ b/diogenes/src/main/resources/application.yml
@@ -38,4 +38,8 @@ logging:
 # Configure the root folder where images will be uploaded. This is read through the
 # FileStorageConfig
 file:
-  upload-dir: ./uploads
+  # Location in file system:
+  uploads-dir: ./uploads
+  images-dir: files/items/images
+  # API Endpoint path
+  images-base-path: ${server.servlet.context-path}/api/v1/files/images/
