[FEATURE] Implement tests for retrieving images and refactor test structure

--- a/diogenes/src/test/resources/application-test.yml
+++ b/diogenes/src/test/resources/application-test.yml
@@ -14,3 +14,6 @@ security:
 # Configure the root folder to verify the uploads paths
 file:
   upload-dir: uploads
+  # The requests to the servlet context does not seem to work
+  images-base-path: /api/v1/files/images/
+
