--- a/diogenes/src/main/resources/application.yml
+++ b/diogenes/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 
 logging:
   level:
-    org.springframework.security: DEBUG
+    org.springframework.security: TRACE
 
 # Configure the root folder where images will be uploaded. This is read through the
 # FileStorageConfig
@@ -42,7 +42,7 @@ file:
   uploads-dir: ./uploads
   images-dir: files/items/images
   # API Endpoint path
-  images-base-path: ${server.servlet.context-path}/api/v1/files/images/
+  images-base-path: http://localhost:8080${server.servlet.context-path}/api/v1/files/images/
 
 diogenes:
   # Enable authentication
