--- a/ng-diogenes/package.json
+++ b/ng-diogenes/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.8",
     "@angular/platform-browser-dynamic": "^16.2.8",
     "@angular/router": "^16.2.8",
+    "@auth0/angular-jwt": "^5.2.0",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
