--- a/ng-diogenes/package.json
+++ b/ng-diogenes/package.json
@@ -39,5 +39,15 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
+  },
+  "overrides": {
+    "@angular-material-components/color-picker": {
+      "@angular/platform-browser": ">=17.0.0",
+      "@angular/common": ">=17.0.0",
+      "@angular/core": ">=17.0.0",
+      "@angular/forms": ">=17.0.0",
+      "@angular/material": ">=17.0.0",
+      "@angular/cdk": ">=17.0.0"
+    }
   }
 }
