[FIX] Allow uploading large images

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,9 @@ http {
         # Hide server versions
         server_tokens off;
 
+        # Allow uploads of larger files
+        client_max_body_size 20M;
+
         # Configure paths
         location /diogenes {
             proxy_pass http://diogenes:8080/diogenes;
