#111 Use lombok for constructors and getters/setters

--- a/diogenes/pom.xml
+++ b/diogenes/pom.xml
@@ -116,6 +116,14 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Contructors and getter/setter with annotations -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -123,6 +131,22 @@
 		<outputDirectory>target/classes</outputDirectory>
 
 		<plugins>
+			<!-- Compile lombok annotations -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.34</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
