--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   diogenes-ng:
     container_name: diogenes-ng
@@ -24,7 +22,7 @@ services:
       - SPRING_DATASOURCE_JDBC-URL=jdbc:postgresql://diogenes-db:5432/diogenes_db
       - SPRING_DATASOURCE_USERNAME=${DATABASE_USER}
       - SPRING_DATASOURCE_PASSWORD=${DATABASE_PASSWORD}
-      - SPRING_APPLICATION_JSON={"jwt.secret":"${TOKEN_SECRET}"}
+      - SPRING_APPLICATION_JSON={"jwt.secret":"${TOKEN_SECRET}", "file.images-host":""}
     ports:
       - 8080:8080
     volumes:
