Add unit tests for the gemini service and ai controller

--- a/diogenes/src/test/resources/application-test.yml
+++ b/diogenes/src/test/resources/application-test.yml
@@ -17,3 +17,7 @@ file:
   # The requests to the servlet context does not seem to work
   images-base-path: /api/v1/files/images/
 
+# AI Configuration
+ai:
+  gemini:
+    api-key: some_key
