--- a/diogenes/pom.xml
+++ b/diogenes/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.5</version>
+		<version>3.4.0</version>
 		<relativePath />
 	</parent>
 	<groupId>dev.nichoko</groupId>
 	<artifactId>diogenes</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 	<name>diogenes</name>
-	<description>Software to manage the personal inventary of items that you own.</description>
+	<description>Software to manage the personal inventory of items that you own.</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -85,12 +85,12 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>10.21.0</version>
+			<version>11.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-database-postgresql</artifactId>
-			<version>10.21.0</version>
+			<version>11.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -98,7 +98,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.6.0</version>
+			<version>2.7.0</version>
 		</dependency>
 
 		<!-- Test coverage -->
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.34</version>
+			<version>1.18.36</version>
 			<scope>provided</scope>
 		</dependency>
 
